<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView71"
    android:fillViewport="true"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CreateRecipe1">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.habijabi.ranna.CreateRecipe1">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/recipe_name"
        android:hint="@string/rec_name"/>

    <Button
        android:background="@drawable/buttonshape"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:onClick="clear_all"
        android:id="@+id/button"
        android:layout_below="@+id/recipe_name"
        android:layout_above="@+id/button9"
        android:layout_alignStart="@+id/next" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:onClick="one"
        android:text="@string/one"
        android:id="@+id/button9"
        android:layout_above="@+id/button8"
        android:layout_alignStart="@+id/button"
        android:layout_marginStart="19dp" />

    <Button
        android:onClick="two"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/button10"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button9" />

    <Button
        android:onClick="three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/button11"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button10" />


    <Button
        android:onClick="four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/button12"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button11" />

    <Button
        android:onClick="five"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/button13"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button12" />
   </LinearLayout>






































<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gram"
        android:onClick="gram"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:layout_marginLeft="5dp" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cup"
        android:text="@string/cup"
        android:id="@+id/button5"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignStart="@+id/button9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piece"
        android:onClick="piece"
        android:id="@+id/button7"
        android:layout_below="@+id/button9"
        android:layout_toEndOf="@+id/button5"
        android:layout_marginLeft="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/samanno"
        android:onClick="samanno"
        android:id="@+id/button8"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/button12"
        android:layout_toEndOf="@+id/button6" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spoon"
        android:onClick="spoon"
        android:id="@+id/button4"
        android:layout_marginLeft="5dp"
        android:layout_above="@+id/textView5"
        android:layout_toEndOf="@+id/button8" />
</LinearLayout>






















    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/textView5"
        android:layout_below="@+id/button5"
        android:layout_toStartOf="@+id/button4"
        android:layout_alignEnd="@+id/ingredients" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:ems="2"
        android:layout_below="@+id/textView5"
        android:id="@+id/ingredients"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/next"
        android:id="@+id/next"
        android:onClick="next"
        android:layout_below="@+id/ingredients"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />




</LinearLayout>
</ScrollView>