<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:id="@+id/sel_layout"

    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/choose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textSize="22dp"
        android:textColor="#000000"
        android:visibility="invisible"
        android:textIsSelectable="true"
        android:typeface="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/add_new"
        android:padding="10dp"
        android:id="@+id/add_ingredient"
        android:onClick="addIngredient"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/buttoncolor"
        android:layout_gravity="center"
        android:textSize="12dp"
        android:typeface="normal" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="#8f8485"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_check"
        android:id="@+id/insert_to_db"
        android:layout_below="@+id/frameLayout2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:onClick="insert_Ingredients"
        android:visibility="invisible"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center|bottom" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listsel">
        </ListView>
    </LinearLayout>



</LinearLayout>
